# Paper-Learn

./: read me
code/MVC-MVD/mvc/1/: ControllerBase.h  MVCDemo.cpp  ModelBase.h  Observer.h  PrintController.cpp  PrintController.h  PrintModel.cpp  PrintModel.h  PrintView.cpp  PrintView.h  TaskBase.h  ThreadBase.cpp  ThreadBase.h  ViewBase.h  stdafx.cpp  stdafx.h  targetver.h
code/MVC-MVD/mvc/2/1/: 1.pro  application.cpp  application.h  controller.cpp  controller.h  creditsview.h  main.cpp  model.h  observable.h  observer.h  titleview.h  versionview.h  views.cpp  views.h
code/MVC-MVD/mvd/: QListViewDemoMaster.tar
code/MVC-MVD/mvd/mvd/: main.cpp  mvd.pro  spinboxdelegate.cpp  spinboxdelegate.h  stringlistmodel.cpp  stringlistmodel.h  widget.cpp  widget.h  widget.ui
code/SimpleTranslator-master/src/: Ui_mainWindowGui.py  googleTranslator.py  main.py  mainWindowGui.py
code/testCMake/1/: read me
code/testCMake/1/demo4/: CMakeLists.txt  main.cpp
code/testCMake/1/demo5/: CMakeLists.txt  main.cpp
code/testCMake/1/demo5/math/: CMakeLists.txt
code/testCMake/1/demo6/: CMakeLists.txt  main.cpp
code/testCMake/1/demo7/: CMakeLists.txt  main.cpp
code/testCMake/1/demo7/math/: MathFunctions.h
code/testCMake/1/demo8/: CMakeLists.txt  config.h.in
code/testWidget/: form.cpp  form.ui  main.cpp  range_image_widget.ui  rangeimage_visualizer_widget.cpp  rangeimage_visualizer_widget.h
cppPython-master/src/: image.cpp
file/: 资料
file/rk/: CMakeLists.txt
file/rk/dlib/lib/cmake/dlib/: dlib.cmake  dlibConfig.cmake
file/rk/dlib/lib/pkgconfig/: dlib-1.pc
file/rk/opencv/include/opencv2/: cvconfig.h
file/rk/opencv/lib/: libopencv_calib3d.so.3.4  libopencv_core.so.3.4.3  libopencv_features2d.so.3.4  libopencv_highgui.so.3.4  libopencv_imgcodecs.so.3.4  libopencv_ml.so.3.4  libopencv_objdetect.so.3.4.3  libopencv_photo.so.3.4.3  libopencv_shape.so.3.4.3  libopencv_stitching.so.3.4.3  libopencv_superres.so.3.4  libopencv_video.so.3.4  libopencv_videoio.so.3.4
file/rk/opencv/lib/pkgconfig/: opencv.pc
file/rk/opencv/share/OpenCV/: OpenCVConfig.cmake
file/valgrind/lib/pkgconfig/: valgrind.pc
file/valgrind/lib/valgrind/: getoff-amd64-linux
testWidget/: CMakeLists.txt  form.h  range_image_widget.cpp  range_image_widget.h  rangeimagewidget.cpp
